change collect(Collectors.toList()) to tolist